Java 8 compat fix